# BACS_e-commerce

./: .env.example  .gitignore  AUTHORS  LICENSE  README.md  app.py  config.py  create_app  docker-compose.yml  pyproject.toml  requirements.txt  seed.py  setup.bat  setup.cfg  setup.py  setup.sh  shell_setup.sh  shophive_run.py
.devcontainer/: devcontainer.json
instance/: shophive.db  site.db
product_management_routes/: delete_product_routes.py  new_product_routes.py  pagination_routes.py  read_product_routes.py  update_product_routes.py
shophive_packages/: __init__.py  create_app  db_utils.py  routes.py
shophive_packages/forms/: forms.py
shophive_packages/models/: __init__.py  cart.py  categories.py  orders.py  product.py  tags.py  types.py  user.py
shophive_packages/routes/: __init__.py  add_product.py  auth_routes.py  cart_routes.py  checkout_routes.py  home.py  order_routes.py  temp_prod_routes.py  temp_user_route.py  user_api_routes.py  user_routes.py
shophive_packages/routes/product_management_routes/: decorators.py  delete_product_routes.py  new_product_routes.py  pagination_routes.py  read_product_routes.py  update_product_routes.py
shophive_packages/services/: auth_helpers.py  auth_service.py
shophive_packages/templates/: add_product.html  base.html  buyer_orders.html  cart.html  checkout.html  home.html  login.html  product_detail.html  product_list.html  profile.html  register.html  seller_orders.html  sellers_page.html  update_product.html
shophive_packages/tests/: __init__.py  conftest.py  test_auth.py  test_homepage.py  test_routes.py
(+12 files in other folders)
