[flake8]
max-line-length = 80
extend-ignore = E203, W503
max-complexity = 10

[mypy]
python_version = 3.10
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True

[metadata]
name = shophive_packages
version = 0.1.0

[options]
packages = find:
install_requires =
    flask
    flask-sqlalchemy
    flask-migrate
    flask-jwt-extended
    flask-login
    flask-restful
    flask-session
    python-dotenv
